# exceptional

./: .gitignore  README.md  pom.xml
agent/: dependency-reduced-pom.xml  hello.snap  pom.xml
agent/src/main/java/com/github/shautvast/exceptional/: Agent.java  CircularBufferWriter.java  CircularByteBuffer.java  ExceptionLogger.java  SingleThreadCircularByteBuffer.java
agent/src/test/java/com/github/shautvast/exceptional/: Compress.java  ExceptionLoggerTest.java  SingleThreadCircularByteBuffer2Test.java  SingleThreadCircularByteBufferTest.java
api/: Cargo.toml  pom.xml
api/migrations/2023-08-31-140536_create_posts/: down.sql  up.sql
api/src/: main.rs  models.rs.z  routes.rs
api/src/domain/models/: post.rs
api/src/handlers/: mod.rs
api/src/handlers/stacktraces/: create_stacktrace.rs  get_stacktrace.rs  list_stacktraces.rs  mod.rs
api/src/infra/db/: schema.rs
api/src/infra/repositories/: mod.rs  stacktrace_repository.rs
concurrency-test/: pom.xml
concurrency-test/src/main/java/org/github/shautvast/exceptional/: StressTest.java
lib/: dependency-reduced-pom.xml  pom.xml
lib/src/main/java/com/github/shautvast/exceptional/: CircularBufferWriter.java  CircularByteBuffer.java  ExceptionLogger.java  MPSCBufferWriter.java  RingBuffer.java  ThrowableHandler.java
lib/src/test/java/com/github/shautvast/exceptional/: RingBufferTest.java  (+3 more)
results/: index.html  org.github.shautvast.exceptional.ConstructorBasic.html  org.github.shautvast.exceptional.StressTest.html
rustlib/: Cargo.toml  bodies  pom.xml
rustlib/src/: Throwable.rs  lib.rs
src/main/java/com/github/shautvast/exceptional/: Agent.java
