[package]
name = "api"
version = "0.1.0"
edition = "2021"


[dependencies]
#serde_json = { version = "1.0", features = [] }
#serde = { version = "1.0", features = ["derive"] }
#anyhow = "1.0"
#postgres = "0.19"
#sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres", "json", "time"] }
#dotenvy = "0.15.0"
#chrono = "0.4"
#axum = "0.7"
#tokio = { version = "1", features = ["full"] }
#tokio-sqlite = "0.1"
#rusqlite = { version = "0.31", features = ["bundled"] }
#tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#tracing = "0.1"

axum = { version = "0.6", features = ["macros"] }
axum-macros = "0.3"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "uuid", "serde_json"] }
diesel_migrations = "2"
deadpool-diesel = { version = "0.4", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = ["fast-rng", "v4", "serde"] }
