[package]
name = "rustlib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
anyhow = "1.0"
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-channel = "0.5"